--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@
                     &amp;
                     <span>Branding Agency</span>
                 </h1>
-                <img class='trigger' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowDown.png'>
+                <button id="myButton"><img class='trigger' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowDown.png'></button>
+                <!-- <img class='trigger' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowDown.png'> -->
             </div>
         </div>
     </div>
