--- a/index.html
+++ b/index.html
@@ -46,15 +46,9 @@
             </div>
             <div class='portfolio_home__title'>
                 <div class='logo'>
-<<<<<<< Updated upstream
                     <img class='first' src='images/VisCommerce.svg'>
                     <!-- <img class='second' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/clogotemp2.png'> -->
                     <!-- <div class='page_portfolio'>
-=======
-                    <img class='first' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/clogotemp.png'>
-                    <img class='second' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/clogotemp2.png'>
-                    <div class='page_portfolio' id="features">
->>>>>>> Stashed changes
                         <div class='portfolio_home__header'>
                             <div class='logoMain'>
                                 <img src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/cagencylogo.png'>
@@ -239,7 +233,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <hr>
                 <h1>
