--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     <model-viewer id="model-viewer-id" src="./models/Sofa.glb" poster="./images/Sofa_Poster.jpg"
                         auto-rotate alt="Light Brown Cloth Sofa" exposure="1" shadow-intensity="3" shadow-softness="0.1"
                         camera-orbit="0 75deg 2m" max-camera-orbit="0 75deg 2.3m" interaction-prompt="none"
-                        camera-controls style="height: 575px;
-                            width: 525px; ">
+                        camera-controls style="height: 450px;
+                            width: 350px; ">
                         <div class="progress-bar" slot="progress-bar">
                             <div class="update-bar"></div>
                         </div>
@@ -46,8 +46,8 @@
             </div>
             <div class='portfolio_home__title'>
                 <div class='logo'>
-                    <img class='first' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/clogotemp.png'>
-                    <img class='second' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/clogotemp2.png'>
+                    <img class='first' src='images/VisCommerce.svg'>
+                    <!-- <img class='second' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/clogotemp2.png'> -->
                     <!-- <div class='page_portfolio'>
                         <div class='portfolio_home__header'>
                             <div class='logoMain'>
@@ -242,7 +242,7 @@
                     &amp;
                     <span>Branding Agency</span>
                 </h1>
-                <button id="myButton"><img class='trigger' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowDown.png'></button>
+                <button id="myButton" style="background: none; border: none;"><img class='trigger' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowDown.png'></button>
                 <!-- <img class='trigger' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowDown.png'> -->
             </div>
         </div>
