--- a/features.html
+++ b/features.html
@@ -14,7 +14,9 @@
 
 </head>
 
-<body>
+<body onload="horipage();">
+
+
     <div class='cursor'>
         <div class='cursor_point'></div>
         <!-- <div class='cursor_outer'></div> -->
@@ -215,7 +217,7 @@
                 </div>
                 <hr>
                 
-                <button id="myButton" style="background: none; border: none;"><img class='trigger' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowDown.png'></button>
+                <!-- <button id="myButton" style="background: none; border: none;"><img class='trigger' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowDown.png'></button> -->
                 <!-- <img class='trigger' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowDown.png'> -->
             </div>
         </div>
