--- a/index.html
+++ b/index.html
@@ -25,15 +25,17 @@
                 <!-- <iframe frameborder="0" height="100%" width="100%"
                     src="https://youtube.com/embed/tz8Puc4W5BM?autoplay=1&controls=0&showinfo=0&autohide=1&mute=1"></iframe> -->
                 <!-- <section class="ModelViewrMain" id="MV"> -->
-                    <model-viewer id="model-viewer-id" src="./models/Sofa.glb" poster="./images/Sofa_Poster.jpg"
-                        auto-rotate alt="Light Brown Cloth Sofa" exposure="1" shadow-intensity="3" shadow-softness="0.1"
-                        camera-orbit="0 75deg 2m" max-camera-orbit="0 75deg 2.3m" interaction-prompt="none"
-                        camera-controls style="height: 450px;
-                            width: 350px; ">
-                        <div class="progress-bar" slot="progress-bar">
-                            <div class="update-bar"></div>
-                        </div>
-                    </model-viewer>
+                    <model-viewer id="model-viewer-id" src="./models/Sofa_Lamp_Table.glb"
+                    poster="./images/Sofa_Lamp_Table_Poster.jpg" auto-rotate alt="Sofa Lamp Table"
+                    interaction-prompt="auto" exposure="1" shadow-intensity="3" shadow-softness="0.1"
+                    camera-orbit="0 70deg 0m" max-camera-orbit="0 75deg 2.3m" interaction-prompt="none" camera-controls style="height: 450px;
+                    width: 600px;">
+
+                    <div class="progress-bar" slot="progress-bar">
+                        <div class="update-bar"></div>
+                    </div>
+
+                </model-viewer>
 
                 <!-- </section> -->
             </div>
