--- a/features.html
+++ b/features.html
@@ -181,7 +181,7 @@
                                     </div>
                                     <div class='image'>
                                         <img draggable='false'
-                                            src="images/sol3.jpg">
+                                            src="images/sol2.png">
                                         <div class='overlay'></div>
                                         <div class='cats'>ADVERTISING DIGITAL STRATEGY</div>
                                         <div class='title'>The new Apple Watch digital campaign 2019</div>
@@ -192,7 +192,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class='slider_inner__slide'>
+                                <!-- <div class='slider_inner__slide'>
                                     <div class='title'>
                                         .04
                                         <br>
@@ -210,7 +210,7 @@
                                                 src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowbblakc.png'>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
