--- a/features.html
+++ b/features.html
@@ -42,11 +42,11 @@
                                 </ul>
                             </div>
                             <div class='number black'>0161 345 3464</div>
-                            <!-- <div class='hamburger black trigger'>
+                            <div class='hamburger black trigger'>
                                 <div class='hamburger_part'></div>
                                 <div class='hamburger_part'></div>
                                 <div class='hamburger_part'></div>
-                            </div> -->
+                            </div>
                         </div>
                         <div class='slider_note'>
                             Drag through our work
@@ -83,7 +83,7 @@
                                 </div>
                                 <div class='image'>
                                     <img draggable='false'
-                                        src="images/vs-1.svg">
+                                        src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/fud.png'>
                                     <div class='overlay'></div>
                                     <div class='cats'>ADVERTISING DESIGN DIGITAL</div>
                                     <div class='title'>My protein rebrand and digital campaign</div>
@@ -139,11 +139,11 @@
                                     <div class='title'>
                                         .01
                                         <br>
-                                        eSpace3D
+                                        My Protein
                                     </div>
                                     <div class='image'>
-                                        <img draggable='false' style="width: 700px;"
-                                            src="images/sol1.jpg">
+                                        <img draggable='false'
+                                            src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/fud.png'>
                                         <div class='overlay'></div>
                                         <div class='cats'>ADVERTISING DESIGN DIGITAL</div>
                                         <div class='title'>My protein rebrand and digital campaign</div>
@@ -162,7 +162,7 @@
                                     </div>
                                     <div class='image'>
                                         <img draggable='false'
-                                            src=  "images/sol2.jpg">
+                                            src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/nike.png'>
                                         <div class='overlay'></div>
                                         <div class='cats'>ADVERTISING DESIGN DIGITAL STRATEGY</div>
                                         <div class='title'>Nike Air max video campaign 2017</div>
@@ -181,7 +181,7 @@
                                     </div>
                                     <div class='image'>
                                         <img draggable='false'
-                                            src="images/sol3.jpg">
+                                            src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/rpo.jpg'>
                                         <div class='overlay'></div>
                                         <div class='cats'>ADVERTISING DIGITAL STRATEGY</div>
                                         <div class='title'>The new Apple Watch digital campaign 2019</div>
