--- a/features.html
+++ b/features.html
@@ -83,7 +83,7 @@
                                 </div>
                                 <div class='image'>
                                     <img draggable='false'
-                                        src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/fud.png'>
+                                        src='images/sol1.jpg'>
                                     <div class='overlay'></div>
                                     <div class='cats'>ADVERTISING DESIGN DIGITAL</div>
                                     <div class='title'>My protein rebrand and digital campaign</div>
@@ -97,7 +97,7 @@
                                 </div>
                                 <div class='image'>
                                     <img draggable='false'
-                                        src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/nike.png'>
+                                        src='images/sol2.jpg'>
                                     <div class='overlay'></div>
                                     <div class='cats'>ADVERTISING DESIGN DIGITAL STRATEGY</div>
                                     <div class='title'>Nike Air max video campaign 2017</div>
@@ -111,13 +111,13 @@
                                 </div>
                                 <div class='image'>
                                     <img draggable='false'
-                                        src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/rpo.jpg'>
+                                        src='images/sol2.png'>
                                     <div class='overlay'></div>
                                     <div class='cats'>ADVERTISING DIGITAL STRATEGY</div>
                                     <div class='title'>The new Apple Watch digital campaign 2019</div>
                                 </div>
                             </div>
-                            <div class='slideClone'>
+                            <!-- <div class='slideClone'>
                                 <div class='title f'>
                                     .04
                                     <br>
@@ -130,7 +130,7 @@
                                     <div class='cats'>ADVERTISING DESIGN DIGITAL STRATEGY</div>
                                     <div class='title'>Another agency did this campaign, not us</div>
                                 </div>
-                            </div>
+                            </div> -->
                             <img class='scroll' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowDown.png'>
                         </div>
                         <div class='portfolio_home__slider'>
@@ -143,7 +143,7 @@
                                     </div>
                                     <div class='image'>
                                         <img draggable='false'
-                                            src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/fud.png'>
+                                            src='images/sol1.jpg'>
                                         <div class='overlay'></div>
                                         <div class='cats'>ADVERTISING DESIGN DIGITAL</div>
                                         <div class='title'>My protein rebrand and digital campaign</div>
@@ -162,7 +162,7 @@
                                     </div>
                                     <div class='image'>
                                         <img draggable='false'
-                                            src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/nike.png'>
+                                            src='images/sol2.jpg'>
                                         <div class='overlay'></div>
                                         <div class='cats'>ADVERTISING DESIGN DIGITAL STRATEGY</div>
                                         <div class='title'>Nike Air max video campaign 2017</div>
@@ -181,7 +181,7 @@
                                     </div>
                                     <div class='image'>
                                         <img draggable='false'
-                                            src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/rpo.jpg'>
+                                            src='images/sol2.png'>
                                         <div class='overlay'></div>
                                         <div class='cats'>ADVERTISING DIGITAL STRATEGY</div>
                                         <div class='title'>The new Apple Watch digital campaign 2019</div>
@@ -192,7 +192,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class='slider_inner__slide'>
+                                <!-- <div class='slider_inner__slide'>
                                     <div class='title'>
                                         .04
                                         <br>
@@ -210,7 +210,7 @@
                                                 src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowbblakc.png'>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
