--- a/features.html
+++ b/features.html
@@ -79,7 +79,7 @@
                                 <div class='title f'>
                                     .01
                                     <br>
-                                    My Protein
+                                    eStore3D
                                 </div>
                                 <div class='image'>
                                     <img draggable='false'
@@ -87,6 +87,26 @@
                                     <div class='overlay'></div>
                                     <div class='cats'>ADVERTISING DESIGN DIGITAL</div>
                                     <div class='title'>My protein rebrand and digital campaign</div>
+                                    <!-- <div class='title'>
+                                        <ul class="about">
+                                            <li>
+                                                Experience sale items in full 3D with Zoom, Rotate etc e.g
+                                                furniture
+                                            </li>
+                                            <li>
+                                                Customize furniture for appearance e.g fabric color
+                                            </li>
+                                            <li>
+                                                Control lamps e.g on/off controls, intensity controls
+                                            </li>
+                                            <li>
+                                                Operate furniture e.g open cabinet doors
+                                            </li>
+                                            <li>
+                                                Experience products InScene and Standalone
+                                            </li>
+                                        </ul>
+                                    </div> -->
                                 </div>
                             </div>
                             <div class='slideClone'>
@@ -97,7 +117,7 @@
                                 </div>
                                 <div class='image'>
                                     <img draggable='false'
-                                        src='images/sol2.jpg'>
+                                        src='images/sol2.png'>
                                     <div class='overlay'></div>
                                     <div class='cats'>ADVERTISING DESIGN DIGITAL STRATEGY</div>
                                     <div class='title'>Nike Air max video campaign 2017</div>
@@ -162,7 +182,7 @@
                                     </div>
                                     <div class='image'>
                                         <img draggable='false'
-                                            src='images/sol2.jpg'>
+                                            src='images/sol2.png'>
                                         <div class='overlay'></div>
                                         <div class='cats'>ADVERTISING DESIGN DIGITAL STRATEGY</div>
                                         <div class='title'>Nike Air max video campaign 2017</div>
