--- a/features.html
+++ b/features.html
@@ -85,9 +85,9 @@
                                     <img draggable='false'
                                         src='images/sol1.png'>
                                     <div class='overlay'></div>
-                                    <div class='cats'>ADVERTISING DESIGN DIGITAL</div>
-                                    <div class='title'>My protein rebrand and digital campaign</div>
-                                    <!-- <div class='title'>
+                                    <div class='cats'></div>
+                                    <div class='title'></div>
+                                    <div class='title'>
                                         <ul class="about">
                                             <li>
                                                 Experience sale items in full 3D with Zoom, Rotate etc e.g
@@ -106,35 +106,73 @@
                                                 Experience products InScene and Standalone
                                             </li>
                                         </ul>
-                                    </div> -->
+                                    </div>
                                 </div>
                             </div>
                             <div class='slideClone'>
                                 <div class='title f'>
                                     .02
                                     <br>
-                                    Nike Air Max
+                                    Develop your eSpace3d App
                                 </div>
                                 <div class='image'>
                                     <img draggable='false'
                                         src='images/sol2.png'>
                                     <div class='overlay'></div>
-                                    <div class='cats'>ADVERTISING DESIGN DIGITAL STRATEGY</div>
-                                    <div class='title'>Nike Air max video campaign 2017</div>
+                                    <div class='cats'></div>
+                                    <div class='title'></div>
+                                    <div class='title'>
+                                        <ul class="about">
+                                            <li>
+                                                Shoot pictures of your space with ordinary smartphones or digital SLR camera
+
+                                            </li>
+                                            <li>
+                                                Space could be a “Living Room” , “Dentist Office” etc.
+                                            </li>
+                                            <li>
+                                                Upload pictures to VisCommerce
+                                            </li>
+                                            <li>
+                                                eSpace3D developed using AI / 3D technologies
+                                            </li>
+                                            <li>
+                                                Download Scale Accurate model of your space bundled into an App, namely eSpace3D
+                                            </li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                             <div class='slideClone'>
                                 <div class='title f'>
                                     .03
                                     <br>
-                                    Apple Watch
+                                    Design your eSpace3d App
                                 </div>
                                 <div class='image'>
                                     <img draggable='false'
                                         src='images/sol3.png'>
                                     <div class='overlay'></div>
-                                    <div class='cats'>ADVERTISING DIGITAL STRATEGY</div>
-                                    <div class='title'>The new Apple Watch digital campaign 2019</div>
+                                    <div class='cats'></div>
+                                    <div class='title'></div>
+                                    <div class='title'>
+                                        <ul class="about">
+                                            <li>
+                                                Download 3D models from eStore3D of furniture, lamps, paints tiles etc.
+
+                                            </li>
+                                            <li>
+                                                Place furniture, place & operate lamps, paint walls, lay floor tiles etc.
+                                            </li>
+                                            <li>
+                                                Work from the comfort of your home, within your budget, to your taste and satisfaction.
+                                            </li>
+                                            <li>
+                                                Save money and enjoy
+                                            </li>
+                                            
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                             <!-- <div class='slideClone'>
@@ -151,7 +189,7 @@
                                     <div class='title'>Another agency did this campaign, not us</div>
                                 </div>
                             </div> -->
-                            <img class='scroll' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowDown.png'>
+                            <!-- <img class='scroll' src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowDown.png'> -->
                         </div>
                         <div class='portfolio_home__slider'>
                             <div class='slider_inner'>
@@ -159,16 +197,16 @@
                                     <div class='title'>
                                         .01
                                         <br>
-                                        My Protein
+                                        Checkout eStore3D
                                     </div>
                                     <div class='image'>
                                         <img draggable='false'
                                             src='images/sol1.png'>
                                         <div class='overlay'></div>
-                                        <div class='cats'>ADVERTISING DESIGN DIGITAL</div>
-                                        <div class='title'>My protein rebrand and digital campaign</div>
-                                        <div class='button'>
-                                            View case study
+                                        <div class='cats'></div>
+                                        <div class='title'></div>
+                                        <div class='button'> 
+                                            View
                                             <img
                                                 src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowbblakc.png'>
                                         </div>
@@ -178,16 +216,16 @@
                                     <div class='title'>
                                         .02
                                         <br>
-                                        Nike Air Max
+                                        Develop your eSpace3d App
                                     </div>
                                     <div class='image'>
                                         <img draggable='false'
                                             src='images/sol2.png'>
                                         <div class='overlay'></div>
-                                        <div class='cats'>ADVERTISING DESIGN DIGITAL STRATEGY</div>
-                                        <div class='title'>Nike Air max video campaign 2017</div>
+                                        <div class='cats'></div>
+                                        <div class='title'></div>
                                         <div class='button'>
-                                            View case study
+                                            View 
                                             <img
                                                 src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowbblakc.png'>
                                         </div>
@@ -197,40 +235,22 @@
                                     <div class='title'>
                                         .03
                                         <br>
-                                        Apple Watch
+                                        Design your eSpace3d App
                                     </div>
                                     <div class='image'>
                                         <img draggable='false'
                                             src='images/sol3.png'>
                                         <div class='overlay'></div>
-                                        <div class='cats'>ADVERTISING DIGITAL STRATEGY</div>
-                                        <div class='title'>The new Apple Watch digital campaign 2019</div>
+                                        <div class='cats'></div>
+                                        <div class='title'></div>
                                         <div class='button'>
-                                            View case study
+                                            View 
                                             <img
                                                 src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowbblakc.png'>
                                         </div>
                                     </div>
                                 </div>
-                                <!-- <div class='slider_inner__slide'>
-                                    <div class='title'>
-                                        .04
-                                        <br>
-                                        Jade Teriyaki
-                                    </div>
-                                    <div class='image'>
-                                        <img draggable='false'
-                                            src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/orangetyhing.png'>
-                                        <div class='overlay'></div>
-                                        <div class='cats'>ADVERTISING DESIGN DIGITAL STRATEGY</div>
-                                        <div class='title'>Another agency did this campaign, not us</div>
-                                        <div class='button'>
-                                            View case study
-                                            <img
-                                                src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/217233/arrowbblakc.png'>
-                                        </div>
-                                    </div>
-                                </div> -->
+                               
                             </div>
                         </div>
                     </div>
