--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -45,27 +45,23 @@
 
 		<!-- Banner -->
 		<section id="banner" class="major">
-			<div class="inner">
+			<div class="inner top-container">
 				<header class="major">
 					<h1>Welcome to Viscommerce</h1>
+					
 				</header>
-				<div class="content">
-					<p>A completely new dimension to shop.<br /></p>
-					<ul class="actions">
-						<li><a href="#one" class="button next scrolly">Get Started</a></li>
-					</ul>
-				</div>
+				
 			</div>
 
-			
+			<!-- <iframe width="560" height="315" style="z-index: 2;" src="https://www.youtube.com/embed/mcdg8bcfSsg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 
 			<!--none-->
-			
+			<video class="viscom-video" src="videos/User Experience @ VisCommerce.mp4" muted loop autoplay  ></video>
 
 		</section>
 
 		<section>
-			<div class="container" style="margin-top: -2%;">
+			<div class="container" style="margin-top: 18%;">
 				<div class="mySlides">
 				  <!-- <div class="numbertext">1 / 6</div> -->
 				  <img class="slider-images" src="images/SalesPitch2-0.jpg" >
@@ -159,8 +155,8 @@
 						<img src="images/pic01.jpg" alt="" />
 					</span>
 					<header class="major">
-						<h3><a href="landing.html" class="link">Aliquam</a></h3>
-						<p>Ipsum dolor sit amet</p>
+						<h3><a href="landing.html" class="link">Features</a></h3>
+						<!-- <p>Ipsum dolor sit amet</p> -->
 					</header>
 				</article>
 				<article>
@@ -168,11 +164,11 @@
 						<img src="images/pic02.jpg" alt="" />
 					</span>
 					<header class="major">
-						<h3><a href="../features.html" class="link">Features</a></h3>
-						<p>feugiat amet tempus</p>
+						<h3><a href="../features.html" class="link">Solutions</a></h3>
+						<!-- <p>feugiat amet tempus</p> -->
 					</header>
 				</article>
-				<article>
+				<!-- <article>
 					<span class="image">
 						<img src="images/pic03.jpg" alt="" />
 					</span>
@@ -180,8 +176,8 @@
 						<h3><a href="landing.html" class="link">Magna</a></h3>
 						<p>Lorem etiam nullam</p>
 					</header>
-				</article>
-				<article>
+				</article> -->
+				<!-- <article>
 					<span class="image">
 						<img src="images/pic04.jpg" alt="" />
 					</span>
@@ -189,8 +185,8 @@
 						<h3><a href="landing.html" class="link">Ipsum</a></h3>
 						<p>Nisl sed aliquam</p>
 					</header>
-				</article>
-				<article>
+				</article> -->
+				<!-- <article>
 					<span class="image">
 						<img src="images/pic05.jpg" alt="" />
 					</span>
@@ -198,8 +194,8 @@
 						<h3><a href="landing.html" class="link">Consequat</a></h3>
 						<p>Ipsum dolor sit amet</p>
 					</header>
-				</article>
-				<article>
+				</article> -->
+				<!-- <article>
 					<span class="image">
 						<img src="images/pic06.jpg" alt="" />
 					</span>
@@ -207,7 +203,7 @@
 						<h3><a href="landing.html" class="link">Etiam</a></h3>
 						<p>Feugiat amet tempus</p>
 					</header>
-				</article>
+				</article> -->
 			</section>
 
 			<!-- Two -->
