--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -47,7 +47,7 @@
 		<section id="banner" class="major">
 			<div class="inner top-container">
 				<header class="major">
-					<h1>Welcome to Viscommerce</h1>
+					<h1>Welcome to VisCommerce</h1>
 					
 				</header>
 				
@@ -210,16 +210,67 @@
 			<section id="two">
 				<div class="inner">
 					<header class="major">
-						<h2>Massa libero</h2>
+						<h2>Our Team</h2>
 					</header>
-					<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna
+					<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel"
+                        aria-labelledby="headingOne">
+                        <div class="panel-body">
+                            <div class="team-box">
+
+                                <div class="team-wrapper">
+                                    <a class="card1 col-lg-3" href="#" style="width: 100%; height: 181px;">
+                                        <h3 class="team-text member1">Ramakrishna J Tumuluri</h3>
+                                        <p class="team-text member11">
+                                            Founder
+                                            <!-- <br> -->
+                                            <!-- 91-9885663163 -->
+                                        </p>
+                                        <div class="go-corner" href="#">
+                                            <div class="go-arrow">
+                                                →
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a class="card1" href="#" style="width: 100%; height: 181px;">
+                                        <h3 class="team-text">Gnan Sai</h3>
+                                        <p class="team-text" style="font-size: 20px;">3D Generalist</p>
+                                        <div class="go-corner" href="#">
+                                            <div class="go-arrow">
+                                                →
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a class="card1" href="#" style="width: 100%; height: 181px;">
+                                        <h3 class="team-text">Jeevan</h3>
+                                        <p class="team-text" style="font-size: 20px;">3D Content Developer</p>
+                                        <div class="go-corner" href="#">
+                                            <div class="go-arrow">
+                                                →
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a class="card1" id="c4" href="# " style="width: 100%; height: 181px;">
+                                        <h3 class="team-text">Nitish</h3>
+                                        <p class="team-text" style="font-size: 20px;">Student Intern</p>
+                                        <div class="go-corner" href="#">
+                                            <div class="go-arrow">
+                                                →
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+					<!-- <p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna
 						magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna.
 						Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem
 						consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus
-						amet pharetra et feugiat tempus.</p>
-					<ul class="actions">
+						amet pharetra et feugiat tempus.</p> -->
+					<!-- <ul class="actions">
 						<li><a href="landing.html" class="button next">Get Started</a></li>
-					</ul>
+					</ul> -->
 				</div>
 			</section>
 
