--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -160,19 +160,19 @@
 			<h1 style="text-align: center;">Why VisCommerce?</h1>
 			<div class="benefits-container">
 				<div class="box1" id="one">
-					<img src="images/benefits (1).png" alt="">
+					<img src="images/benefits__1 (1).png" alt="">
 					<h3>Grow revenue by more than 100%?</h3>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
 					<button onclick="window.location.href='generic.html'">Read More</button>
 				</div>
 				<div class="box1" id="two">
-					<img src="images/benefits (2).jpg" alt="">
+					<img src="images/benefits__1 (2).png" alt="">
 					<h3>Acquire customers for life??</h3>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
 					<button onclick="window.location.href='generic.html'">Read More</button>
 				</div>
 				<div class="box1" id="three">
-					<img src="images/benefits (3).jpg" alt="">
+					<img src="images/benefits__1 (3).png" alt="">
 					<h3>Sell big-ticket items easily?</h3>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
 					<button onclick="window.location.href='generic.html'">Read More</button>
